Bug 311972 - Nepomuk fails finding file in folder named "Årspraktik - ansøgninger"
Summary: Nepomuk fails finding file in folder named "Årspraktik - ansøgninger"
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: kioslave - nepomuksearch (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR grave
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-20 07:57 UTC by Anders Lund
Modified: 2012-12-22 12:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Lund 2012-12-20 07:57:30 UTC
Nepomuk is fully enabled, and supposedly everything is indexed. Yet, finding files by content in the folder "~/Dokumenter/DFL/Årspraktik - ansøgninger" from within dolphin is impossible. Such files does not appear in the krunner search either. Is it the folder name?

Reproducible: Always

Steps to Reproduce:
1. create a folder named as described, and put some pdf or odt documents in it with some known words in them
2. wait for nepomuk to index them
3. search for some of the known words with dolphin or krunner
Actual Results:  
documents are not found

Expected Results:  
documents found
Comment 1 Anders Lund 2012-12-21 00:36:25 UTC
A bit weird, this partly works today, pdf files are found, but not all of the corresponding odt files :$ I'm not confident it finds all the pdfs either. In dolphin. the KRunner plugin finds not those files, but a bunch of events and a few files. is there a limit in the krunner results number?

Anyway, better than a few days ago. Hopefully reliable (not that it should not become better)!

Had two reboots, but the pc has had lots of idle time before that it did not appear use, judging from results.
Comment 2 Vishesh Handa 2012-12-22 12:23:15 UTC
Git commit 7e852d7974bd91a6d9994f47dc6a603e183d3fe7 by Vishesh Handa.
Committed on 22/12/2012 at 13:04.
Pushed by vhanda into branch 'KDE/4.10'.

OptimizedByteArray: Ignore the empty parts when the bytearray is split

Not ignoring the empty parts resulted in an extra '\' at the start of
the string when converting it back to one byte array. This completely
screwed up the real time indexing.
FIXED-IN: 4.10

M  +7    -1    services/filewatch/optimizedbytearray.h

http://commits.kde.org/nepomuk-core/7e852d7974bd91a6d9994f47dc6a603e183d3fe7
Comment 3 Vishesh Handa 2012-12-22 12:28:39 UTC
(In reply to comment #1)
> A bit weird, this partly works today, pdf files are found, but not all of
> the corresponding odt files :$ I'm not confident it finds all the pdfs
> either. In dolphin. the KRunner plugin finds not those files, but a bunch of
> events and a few files. is there a limit in the krunner results number?

The problem was that I accidentally broke the real-time indexing of files. So the files would get indexed when the system was restarted but not otherwise.

Also, we index the basic information of all the files ( filename, mimetype, etc ), but the contents + metadata are only indexed of those files who we have indexers for. We currently do not have indexers for odt files. I'm still working on it. PDF files are supported, so they shouldn't be a problem.

> 
> Anyway, better than a few days ago. Hopefully reliable (not that it should
> not become better)!
> 
> Had two reboots, but the pc has had lots of idle time before that it did not
> appear use, judging from results.