OptimizedByteArray: Ignore the empty parts when the bytearray is split

Not ignoring the empty parts resulted in an extra '\' at the start of
the string when converting it back to one byte array. This completely
screwed up the real time indexing.

BUG: 311972
FIXED-IN: 4.10